# STM32_PyMCSDK

./: AS5047.py  ControlMotorWithGamePad.py  bg431Communication.py  ftdiGPIOread.py  getDataAndPlotGraphs.ipynb  getDataFromBG431.py  getDataFromBG431andSTMF4.py  getDataFromSTM32F4.py  joysticInput.py  motorLogNeutral.txt  plotMotorLog.py  serialRead.py  testEvdevInputs.ipynb  test_common.py
ftdiBitbangSPI/: CMakeLists.txt  main.c  spi.h  spi_ft232.c
